[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/screens/Games.gd" type="Script" id=1]
[ext_resource path="res://assets/user interface/themes/MinimalUI/MinimalUI.tres" type="Theme" id=2]
[ext_resource path="res://assets/user interface/themes/main_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/user interface/themes/DarkTheme/StyleBox/Panel.stylebox" type="StyleBox" id=4]
[ext_resource path="res://assets/user interface/backgrounds/BackgroundApp.png" type="Texture" id=5]
[ext_resource path="res://assets/user interface/themes/main_theme.tres" type="Theme" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.639216, 0.658824, 0.996078, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="."]
margin_left = 718.0
margin_top = 30.0
margin_right = 1202.0
margin_bottom = 110.0
custom_fonts/font = ExtResource( 3 )
text = "LISTA PARTITE:"
align = 1
uppercase = true

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 75.5
margin_top = 130.0
margin_right = 1844.5
margin_bottom = 230.0
custom_styles/bg = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 1767.0
margin_bottom = 86.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/HBoxContainer"]
margin_right = 880.0
margin_bottom = 84.0
size_flags_horizontal = 3

[node name="Games" type="Label" parent="ScrollContainer/HBoxContainer/VBoxContainer"]
margin_right = 880.0
margin_bottom = 84.0
custom_colors/font_color = Color( 1, 1, 0.996078, 1 )
custom_fonts/font = ExtResource( 3 )
text = "PARTITA:"
align = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="ScrollContainer/HBoxContainer"]
margin_left = 884.0
margin_right = 1765.0
margin_bottom = 84.0
size_flags_horizontal = 3

[node name="Dati" type="Label" parent="ScrollContainer/HBoxContainer/VBoxContainer2"]
margin_right = 881.0
margin_bottom = 84.0
custom_colors/font_color = Color( 1, 1, 0.996078, 1 )
custom_fonts/font = ExtResource( 3 )
text = "DATI:"
align = 1

[node name="ScrollContainer2" type="ScrollContainer" parent="."]
margin_left = 80.0
margin_top = 250.0
margin_right = 1848.0
margin_bottom = 740.0
custom_styles/bg = SubResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer2"]
margin_right = 1768.0
margin_bottom = 490.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer2/HBoxContainer"]
margin_right = 878.0
margin_bottom = 490.0
size_flags_horizontal = 3

[node name="VSeparator" type="VSeparator" parent="ScrollContainer2/HBoxContainer"]
margin_left = 882.0
margin_right = 886.0
margin_bottom = 490.0

[node name="VBoxContainer2" type="VBoxContainer" parent="ScrollContainer2/HBoxContainer"]
margin_left = 890.0
margin_right = 1768.0
margin_bottom = 490.0
size_flags_horizontal = 3
custom_constants/separation = 15
alignment = 1

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 17.0
margin_top = 858.0
margin_right = 1901.0
margin_bottom = 999.0
size_flags_horizontal = 4
size_flags_vertical = 3
custom_constants/separation = 50
alignment = 1

[node name="Button" type="Button" parent="HBoxContainer"]
margin_left = 698.0
margin_right = 992.0
margin_bottom = 141.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "INDIETRO"

[node name="Button2" type="Button" parent="HBoxContainer"]
margin_left = 1042.0
margin_right = 1186.0
margin_bottom = 141.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "ESCI"

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/Button2" to="." method="_on_Button2_pressed"]
